[project]
name = "variablesengine"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "asyncpg",
    "hatchling>=1.27.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "dotenv",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]
